--- a/app/src/main/res/layout/activity_test1.xml
+++ b/app/src/main/res/layout/activity_test1.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".activity.Test1Activity">
 
-</androidx.appcompat.widget.LinearLayoutCompat>
+    <com.zw.app.view.MagicView
+        android:id="@+id/myView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:colors="@array/MagicView_Colors"
+        app:radius="35px" />
+
+</FrameLayout>
